--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl</artifactId>
+            <version>11.7</version>
+        </dependency>
     </dependencies>
 
     <reporting>
